# src/main/java/ch/cern/todo/error/RestExceptionHandler.java
@@ -4,6 +4,7 @@ import ch.cern.todo.openapi.model.Error;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authorization.AuthorizationDeniedException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
@@ -24,5 +25,15 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
         log.error(ex.getMessage(), ex);
         return new ResponseEntity<>(ex.buildError(), ex.getHttpStatusCode());
     }
+
+    @ExceptionHandler(AuthorizationDeniedException.class)
+    public ResponseEntity<Error> applicationExceptionHandler(AuthorizationDeniedException ex) {
+        log.error(ex.getMessage(), ex);
+        Error error = new Error();
+        error.setCode(Error.CodeEnum.AUTHORIZATION_DENIED);
+        error.setMessage(ex.getMessage());
+        return new ResponseEntity<>(error, HttpStatusCode.valueOf(403));
+    }
+
 
 }
