# src/main/resources/static/swagger.yml
@@ -6,7 +6,7 @@ info:
     email: tdonnenfeld@gmail.com
   version: 1.0.11
 servers:
-  - url: https://todo.les12.fr
+  - url: http://localhost:8080
 tags:
   - name: todo
     description: Operations about todos
@@ -44,7 +44,7 @@ paths:
       description: Add a new todo
       operationId: addTodo
       requestBody:
-        $ref: '#/components/requestBodies/PostTodoRequest'
+        $ref: '#/components/requestBodies/PostOrPutTodoRequest'
       responses:
         '200':
           description: Successful operation
@@ -72,7 +72,7 @@ paths:
       description: Search parameters are given in request body
       operationId: searchTodos
       requestBody:
-        $ref: '#/components/requestBodies/SearchTodosRequest'
+        $ref: '#/components/requestBodies/AdminSearchTodosRequest'
       responses:
         '200':
           description: successful operation
@@ -111,12 +111,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
   /todo/mine/search:
-    get:
+    post:
       tags:
         - todo
       summary: Search todos from authenticated user
       description: Get my todos
       operationId: searchMyTodos
+      requestBody:
+        $ref: '#/components/requestBodies/SearchTodosRequest'
       responses:
         '200':
           description: successful operation
@@ -181,12 +183,7 @@ paths:
             type: integer
             format: int64
       requestBody:
-        description: Update an existent todo
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Todo'
-        required: true
+        $ref: '#/components/requestBodies/PostOrPutTodoRequest'
       responses:
         '204':
           description: Successful operation
@@ -409,6 +406,8 @@ components:
           example: "2025-02-04T23:59:59.00Z"
         category:
           $ref: '#/components/schemas/Category'
+        owner:
+          type: string
     Category:
       type: object
       required:
@@ -461,8 +460,9 @@ components:
             - "INVALID_USER_OR_PASSWORD"
             - "USER_ALREADY_EXISTS"
             - "RESOURCE_NOT_FOUND"
+            - "AUTHORIZATION_DENIED"
   requestBodies:
-    PostTodoRequest:
+    PostOrPutTodoRequest:
       description: Todo object that needs to be added
       required: true
       content:
@@ -552,3 +552,35 @@ components:
                 type: string
                 example: "Chore"
                 description: Case insensitive category match
+    AdminSearchTodosRequest:
+      description: Todo search request object
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+                format: int64
+                example: 2
+              nameContains:
+                type: string
+                example: "Wash the dishes"
+              descriptionContains:
+                type: string
+                example: "It's been piling up I need to do something..."
+              deadlineAfter:
+                type: string
+                format: date-time
+                example: "2025-02-04T23:59:59.00Z"
+              deadlineBefore:
+                type: string
+                format: date-time
+                example: "2025-02-04T23:59:59.00Z"
+              categoryIs:
+                type: string
+                example: "Chore"
+              owner:
+                type: string
+                example: "theo"
